2016-01-20  Joseph Myers  <joseph@codesourcery.com>

	* sysdeps/unix/sysv/linux/powerpc/powerpc32/nofpu/localplt.data
	(__gtsf2): Add as optional for libc.so.
	(__unordsf2): Likewise.
	(__signbit): Remove for libc.so.
	(__signbitl): Likewise.

2016-01-19  Stefan Liebler  <stli@linux.vnet.ibm.com>

	* iconvdata/bug-iconv11.c (test_ibm93x):
	Use %zu printf format specifier for size_t argument.

2016-01-19  Joseph Myers  <joseph@codesourcery.com>

	* math/gen-libm-test.pl (parse_ulps): Do not reduce
	already-recorded ulps.
	* sysdeps/arm/libm-test-ulps: Regenerated.
	* sysdeps/mips/mips32/libm-test-ulps: Likewise.
	* sysdeps/mips/mips64/libm-test-ulps: Likewise.
	* sysdeps/powerpc/nofpu/libm-test-ulps: Likewise.

2016-01-19  Andrew Senkevich  <andrew.senkevich@intel.com>
	    Paul Pluzhnikov  <ppluzhnikov@google.com>

	* sysdeps/x86_64/multiarch/ifunc-impl-list.c: Fixed build with
	assembler not supporting AVX-512.

2016-01-18  Stefan Liebler  <stli@linux.vnet.ibm.com>

	* sysdeps/s390/fpu/libm-test-ulps: Regenerated.

2016-01-18  Joseph Myers  <joseph@codesourcery.com>

	* sysdeps/mips/mips32/libm-test-ulps: Regenerated.
	* sysdeps/mips/mips64/libm-test-ulps: Likewise.

	* sysdeps/powerpc/nofpu/libm-test-ulps: Regenerated.

	* sysdeps/arm/libm-test-ulps: Regenerated.

2016-01-18  Paul Pluzhnikov  <ppluzhnikov@google.com>

	[BZ #19451]
	* math/Makefile (libm-vec-tests): Move libraries after wrappers.o

2016-01-15  Stefan Liebler  <stli@linux.vnet.ibm.com>

	[BZ #19486]
	* sysdeps/s390/fix-fp-int-convert-overflow.h: New File.
	* sysdeps/generic/fix-fp-int-convert-overflow.h
	(FIX_LDBL_LONG_CONVERT_OVERFLOW,
	FIX_LDBL_LLONG_CONVERT_OVERFLOW): New define.
	* sysdeps/arm/fix-fp-int-convert-overflow.h: Likewise.
	* sysdeps/mips/mips32/fpu/fix-fp-int-convert-overflow.h:
	Likewise.
	* sysdeps/ieee754/ldbl-128/s_lrintl.c (__lrintl):
	Avoid conversions to long int where inexact exceptions
	could be raised.
	* sysdeps/ieee754/ldbl-128/s_lroundl.c (__lroundl):
	Likewise.